# probing-utils

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml
probe-utils/: .TrainingRun.py.swp  CachedProbingDataset.py  DatasetGenerator.py  ModifyActivationDataset.py  ProbeTrainer.py  ProbedModel.py  ProbingDataset.py  TestLinearProbesOnEarlyLayerModification.py  Testing.py  TextOnlyDataset.py  TrainingRun.py  TrainingRunBuilder.py  TransformerLensResidualContributors.py  TryDatasets.ipynb  TryingUtils.ipynb  Untitled.ipynb
probe-utils/probe-utils.tests/: LabeledDatasetShould.py
probe-utils/probe-utils.tests/fakes/: FakeProbedModel.py
