[project]
name = "probing-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.4.1",
    "jupyterlab>=4.4.10",
    "pytest>=8.4.2",
    "torch>=2.9.0",
]
[tool.pytest.ini_options]
testpaths = ["probe-utils.tests/*"]
python_files = ["*.py"]
